# vaultsh

./: .gitignore  LICENSE  README.md  config.example  install_vaultsh.sh  pyproject.toml  requirements.txt  setup.sh  setup_vaultsh.sh  vaultsh
lib/: core.sh  nav.sh  ops.sh  ui.sh
src/vaultsh/: __init__.py  __main__.py  config.py  menus.py  setup_config.py  ui.py  vault_client.py
src/vaultsh/commands/: __init__.py  browse.py  diagnostics.py  read_write.py  session.py
