[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultsh"
version = "2.0.0"
description = "Interactive CLI wrapper around HashiCorp Vault (Python)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "hvac>=2.1.0",
    "rich>=13.0.0",
]

[project.scripts]
vaultsh = "vaultsh.__main__:main"
vaultsh-setup = "vaultsh.setup_config:main"

[tool.setuptools.packages.find]
where = ["src"]
